--- a/content/participant/G-k02.md
+++ b/content/participant/G-k02.md
@@ -1,7 +1,11 @@
 ## This is my first PR for HACKTOBER FEST 2021 
- ##  Just learning to contribute to opensource.... 
+:star: 💻
+##  Just learning to contribute to opensource.... 
  - [ ] Succesfully completing PR
-* name:Gouri.k
-* institution/company: SREC coimbatore
-* github:G-k02
+---
+ * name: GOURI.K
+ * institution/company: SREC
+ * github:G-k02
+---
+
 
