--- a/content/participant/G-k02.md
+++ b/content/participant/G-k02.md
@@ -1,7 +1,7 @@
 ## This is my first PR for HACKTOBER FEST 2021 
 :star: 💻
 ##  Just learning to contribute to opensource.... 
- - [ ] Succesfully completing PR
+ - [ ] Succesfully completing Pullrequest
 ---
  * name: GOURI.K
  * institution/company: SREC
